# heracles-ql

./: Makefile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: lint-python.yml  publish-to-pypi.yml  test-python.yml
codegen/: markdown.py  no-changes.sh
delos/: Makefile  go.mod  go.sum  main.go
delos/python/: executor.go  interface.py
delos/python/templates/: snippet.py.tmpl
delos/static/: index.html
delos/tui/: editor.go  initial_script.py  tui.go
heracles/ql/: prelude.py
hermes/: go.mod
test/config/: rule_test.py
test/config/generation/: project_test.py
test/config/generation/fixtures/: test_module.py
test/stdlib/: acceptance_test.py
test/unittest/: generators_test.py
unittest/: hermes.py
